# ScientificGystogramm

./: CMakeLists.txt  Gystogramm.cpp  Gystogramm.h  Histogram.cpp  Histogram.h  Parser.cpp  Parser.h  gtest.cpp  hist.txt  main.cpp
